[gd_scene load_steps=6 format=2]

[ext_resource path="res://resources/Ui/Buttons/backbtn_released.png" type="Texture" id=1]
[ext_resource path="res://resources/Ui/Buttons/backbtn_pushed.png" type="Texture" id=2]
[ext_resource path="res://resources/Ui/Buttons/backbtn_over.png" type="Texture" id=3]
[ext_resource path="res://scripts/ui/CloseButton.gd" type="Script" id=4]
[ext_resource path="res://resources/Sound/button_press.wav" type="AudioStream" id=5]

[node name="Control" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="TextureButton" parent="."]
margin_right = 48.0
margin_bottom = 65.0
size_flags_horizontal = 5
size_flags_vertical = 5
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 3 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PressSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
mix_target = 2
bus = "Sfx"
[connection signal="pressed" from="CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="finished" from="PressSound" to="." method="_on_PressSound_finished"]
